@@ -1,11 +1,9 @@
 /*
- * driver.h
- *
  * This file is released under the terms of the Artistic License.  Please see
  * the file LICENSE, included in this package, for details.
  *
  * Copyright (C) 2002 -----Open Source Development Lab, Inc.
- *               2002-2021 Mark Wong
+ *               2002-2022 Mark Wong
  *
  * 7 august 2002
  */
@@ -105,5 +103,6 @@ extern int mode_altered;
 extern unsigned long long seed;
 extern int client_conn_sleep;
 extern int spread;
+extern int fork_per_processor;
 
 #endif /* _DRIVER_H_ */
